--- a/TDS_WEEK8.ipynb
+++ b/TDS_WEEK8.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOHB7/aC5I2hY3HpVHD0OYk",
+      "authorship_tag": "ABX9TyPX1ZoRbrwjjFwhB/rdeZQm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,44 +51,38 @@
     {
       "cell_type": "code",
       "source": [
-        "%%writefile app.py\n",
-        "\n",
         "import streamlit as st\n",
-        "\n",
-        "def find_largest_number(a, b, c):\n",
-        "    return max(a, b, c)\n",
-        "\n",
-        "def main():\n",
-        "    st.title(\"Largest Number Finder\")\n",
-        "\n",
-        "    # Input values\n",
-        "    a = st.number_input(\"Enter the first number:\", key=\"a\")\n",
-        "    b = st.number_input(\"Enter the second number:\", key=\"b\")\n",
-        "    c = st.number_input(\"Enter the third number:\", key=\"c\")\n",
-        "\n",
-        "    # Find the largest number\n",
-        "    result = find_largest_number(a, b, c)\n",
-        "\n",
-        "    # Display the result\n",
-        "    st.write(f\"The largest number among {a}, {b}, and {c} is: {result}\")\n",
-        "\n",
-        "if __name__ == \"__main__\":\n",
-        "    main()"
+        "st.title('webapp to find largest among three numbers')\n",
+        "st.header('Enter your inputs here')\n",
+        "First_number = st.number_input('Enter first number')\n",
+        "Second_number = st.number_input('Enter second number')\n",
+        "Third_number = st.number_input('Enter Third number')\n",
+        "def find_largest_number():\n",
+        "  list = [First_number,Second_number,Third_number]\n",
+        "  Max_Num = max(list)\n",
+        "  st.success(f'Largest = {Max_Num}')\n",
+        "if st.button('Calculate result'):\n",
+        "  find_largest_number()\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YvPhBECL9v-I",
-        "outputId": "104b0641-92d5-460c-f73b-52b50f7eb091"
+        "outputId": "eebea302-2bb0-481d-cb68-c700b91aa16a"
       },
-      "execution_count": 14,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
+          "name": "stderr",
           "text": [
-            "Overwriting app.py\n"
+            "2023-12-06 15:49:40.094 \n",
+            "  \u001b[33m\u001b[1mWarning:\u001b[0m to view this Streamlit app on a browser, run it with the following\n",
+            "  command:\n",
+            "\n",
+            "    streamlit run /usr/local/lib/python3.10/dist-packages/colab_kernel_launcher.py [ARGUMENTS]\n"
           ]
         }
       ]
