--- a/tds_week_8.ipynb
+++ b/tds_week_8.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNPc0i10vBTF7WsDBI5n/Cf",
+      "authorship_tag": "ABX9TyNdw+qCwbqvq+3Gigk8qOam",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 23,
       "metadata": {
         "id": "cHI_TPX09hQ8"
       },
@@ -51,24 +51,36 @@
     {
       "cell_type": "code",
       "source": [
+        "# Save the code to a file named app.py\n",
+        "code = \"\"\"\n",
+        "# Paste your code here\n",
         "import streamlit as st\n",
-        "st.title('webapp to find largest among three numbers')\n",
+        "\n",
+        "st.title('Web App to Find the Largest Among Three Numbers')\n",
         "st.header('Enter your inputs here')\n",
-        "first_number = st.number_input('Enter first number')\n",
-        "second_number = st.number_input('Enter second number')\n",
-        "third_number = st.number_input('Enter Third number')\n",
-        "def find_largest_number(First,Second,Third):\n",
-        "  list = [First,Second,Third]\n",
-        "  Max_Num = max(list)\n",
-        "  st.success(f'Largest = {Max_Num}')\n",
+        "\n",
+        "# Collect user inputs\n",
+        "first_number = st.number_input('Enter the first number')\n",
+        "second_number = st.number_input('Enter the second number')\n",
+        "third_number = st.number_input('Enter the third number')\n",
+        "\n",
+        "def find_largest_number(first, second, third):\n",
+        "    numbers = [first, second, third]\n",
+        "    max_num = max(numbers)\n",
+        "    st.success(f'Largest = {max_num}')\n",
+        "\n",
         "if st.button('Calculate result'):\n",
-        "  find_largest_number(first_number,second_number,third_number)\n",
-        "\n"
+        "    find_largest_number(first_number, second_number, third_number)\n",
+        "\"\"\"\n",
+        "\n",
+        "# Write the code to a file named app.py\n",
+        "with open('app.py', 'w') as f:\n",
+        "    f.write(code)"
       ],
       "metadata": {
-        "id": "YvPhBECL9v-I"
+        "id": "XVkSnSMm9sAi"
       },
-      "execution_count": 18,
+      "execution_count": 24,
       "outputs": []
     }
   ]
