--- a/tds_week_8.ipynb
+++ b/tds_week_8.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNdw+qCwbqvq+3Gigk8qOam",
+      "authorship_tag": "ABX9TyOFpA5qFdUIE5NQlhzgNM+S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "cHI_TPX09hQ8"
       },
@@ -40,20 +40,8 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install pyngrok"
-      ],
-      "metadata": {
-        "id": "CFt1G5bo-frE"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Save the code to a file named app.py\n",
+        "# Code to create the app.py file\n",
         "code = \"\"\"\n",
-        "# Paste your code here\n",
         "import streamlit as st\n",
         "\n",
         "st.title('Web App to Find the Largest Among Three Numbers')\n",
@@ -74,14 +62,29 @@
         "\"\"\"\n",
         "\n",
         "# Write the code to a file named app.py\n",
-        "with open('app.py', 'w') as f:\n",
-        "    f.write(code)"
+        "with open('/content/app.py', 'w') as f:\n",
+        "    f.write(code)\n",
+        "\n",
+        "# Display the list of files in the current directory\n",
+        "!ls /content\n"
       ],
       "metadata": {
-        "id": "XVkSnSMm9sAi"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YN2IeIrNJ3zK",
+        "outputId": "3ee054fc-7b19-4d56-ee2a-69ad577738ad"
       },
-      "execution_count": 24,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "app.py\tdrive  sample_data\n"
+          ]
+        }
+      ]
     }
   ]
 }
